compiler/tests/should-fail/TypeMismatch4.via
/* TypeMismatchError */

host alice : {A}
host bob : {B}

process Local(host = {alice, bob}) {}
